// ignore_for_file: constant_identifier_names

enum WasteType {
  PLASTIC,
  GLASS,
}
