import 'package:flutter/services.dart';

class ServerConnection {}
